--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "m2commerce/order-comment",
     "description": "Magento 2 Module to add a comment field above the place order button in the checkout",
     "require": {
-        "php": "~7.1.0|~7.2.0|~7.3.0|~7.4.0|~8.1.0"
+        "php": "~7.3.0|~7.4.0|~8.1.0"
     },
     "type": "magento2-module",
     "keywords": ["magento2"],
-    "version": "1.0.1",
+    "version": "1.0.2",
     "license":[
         "proprietary"
     ],
